--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,30 +1,81 @@
-# This file configures the static analysis results for your project (errors,
-# warnings, and lints).
-#
-# This enables the 'recommended' set of lints from `package:lints`.
-# This set helps identify many issues that may lead to problems when running
-# or consuming Dart code, and enforces writing Dart using a single, idiomatic
-# style and format.
-#
-# If you want a smaller set of lints you can change this to specify
-# 'package:lints/core.yaml'. These are just the most critical lints
-# (the recommended set includes the core lints).
-# The core lints are also what is used by pub.dev for scoring packages.
+include: package:flutter_lints/flutter.yaml
 
-include: package:lints/recommended.yaml
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+    - "**/*.gen.dart"
+    - "test/.test_coverage.dart"
+    - "bin/cache/**"
+    - "lib/generated_plugin_registrant.dart"
+    - "**/*.graphql.dart"
 
-# Uncomment the following section to specify additional rules.
+  errors:
+    implementation_imports: error
+    must_be_immutable: error
+    non_constant_identifier_names: error
+    sort_pub_dependencies: error
+    invalid_use_of_protected_member: error
+    todo: info
+    unused_local_variable: ignore
+    invalid_annotation_target: ignore
 
 linter:
   rules:
-    - public_member_api_docs
-
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
-
-# For more information about the core and recommended set of lints, see
-# https://dart.dev/go/core-lints
-
-# For additional information about configuring this file, see
-# https://dart.dev/guides/language/analysis-options
+    - always_declare_return_types
+    - always_put_control_body_on_new_line
+    - always_put_required_named_parameters_first
+    - always_use_package_imports
+    - annotate_overrides
+    - avoid_escaping_inner_quotes
+    - avoid_function_literals_in_foreach_calls
+    - avoid_init_to_null
+    - avoid_multiple_declarations_per_line
+    - avoid_redundant_argument_values
+    - avoid_relative_lib_imports
+    - avoid_returning_null_for_void
+    - avoid_returning_this
+    - avoid_single_cascade_in_expression_statements
+    - avoid_unnecessary_containers
+    - avoid_unused_constructor_parameters
+    - avoid_void_async
+    - await_only_futures
+    - camel_case_types
+    - cascade_invocations
+    - constant_identifier_names
+    - control_flow_in_finally
+    - curly_braces_in_flow_control_structures
+    - directives_ordering
+    - empty_constructor_bodies
+    - file_names
+    - leading_newlines_in_multiline_strings
+    - library_names
+    - library_prefixes
+    - no_default_cases
+    - null_check_on_nullable_type_parameter
+    - null_closures
+    - package_names
+    - parameter_assignments
+    - prefer_conditional_assignment
+    - prefer_const_constructors
+    - prefer_contains
+    - prefer_final_fields
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_if_null_operators
+    - prefer_interpolation_to_compose_strings
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - prefer_null_aware_method_calls
+    - prefer_null_aware_operators
+    - prefer_single_quotes
+    - prefer_spread_collections
+    - require_trailing_commas
+    - sort_child_properties_last
+    - sort_constructors_first
+    - unawaited_futures
+    - unnecessary_parenthesis
+    - use_full_hex_values_for_flutter_colors
+    - use_late_for_private_fields_and_variables
+    - use_string_buffers
