--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,23 @@
 name: paypal_payment
 description: Dart package for paypal payment integration in all platforms.
-version: 1.0.0+4
+version: 2.0.0+1
 repository: https://github.com/code-Shabbir/paypal_payment.git
 
 environment:
-  sdk: ">=2.19.0 <4.0.0"
+  sdk: ">=3.3.0 <4.0.0"
+  flutter: ">=3.22.0"
 
 # Add regular dependencies here.
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview: ^6.0.0
-  dio: ^5.5.0+1
+  flutter_inappwebview: ^6.1.5
+  dio: ^5.7.0
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.0
+  build_runner: ^2.4.13
+  lints: ^5.0.0
+  test: ^1.25.8
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
